# ai-brokerage

./: .gitignore  BETA_OPTIONS_GUIDE.md
docs/plans/: 2026-02-26-unify-holdings-positions-design.md  2026-02-26-unify-holdings-positions.md
services/ai/: .env.example  pyproject.toml
services/ai/app/: config.py  main.py
services/ai/app/prompts/: context.py  system.py
services/ai/app/routes/: chat.py  health.py  tts.py  voice.py
services/ai/app/schemas/: chat.py
services/ai/app/services/: be_client.py  chat.py  pipeline.py
services/ai/app/tools/: __init__.py  behavioural.py  dispatcher.py  market_data.py  portfolio.py  scheduling.py  trading.py
services/ai/app/utils/: http_logging.py  text.py
services/be/: .env.example  pyproject.toml  yahoo_server.py
services/be/alembic/: env.py
services/be/alembic/versions/: 001_initial_schema.py  002_add_trades_strategies_positions.py  003_add_holding_side.py  004_add_holdings_fno_columns.py  004_add_notifications.py  005_drop_positions_table.py
services/be/app/: config.py  database.py  main.py  middleware.py  seed.py
services/be/app/models/: __init__.py  alert.py  conversation.py  notification.py  order.py  portfolio.py  strategy.py  trade.py  user.py  watchlist.py
services/be/app/routes/: alerts.py  analytics.py  conversations.py  health.py  market.py  notifications.py  orders.py  portfolio.py  positions.py  strategies.py  trades.py  user.py  watchlist.py  wellbeing.py  yahoo_finance.py
services/be/app/schemas/: __init__.py  conversation.py  market.py  order.py  portfolio.py  strategy.py  trade.py
services/be/app/services/: __init__.py  ai_context.py  alert_detector.py  analytics.py  condition.py  exceptions.py  factory.py  margin.py  market_data.py  options_greeks.py  order.py  portfolio.py  position_service.py  price.py  price_monitor.py  scheduler.py  strategy_service.py  trade_history.py  wellbeing.py  yahoo_finance.py
services/be/app/utils/: formatters.py
services/be/tests/: test_yahoo_finance.py
services/fe/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
services/fe/src/: App.jsx  config.js  index.css
services/fe/src/api/: alerts.js  analytics.js  client.js  conversations.js  market.js  notifications.js  optionChain.js  orders.js  portfolio.js  positions.js  strategies.js  trades.js  user.js  watchlist.js
services/fe/src/components/common/: Card.jsx  (+4 more)
services/fe/src/hooks/: useApi.js  useChat.js  useOptionChainWebSocket.js  useWatchlistPriceStream.js  useWebSocket.js
services/fe/src/pages/: Assistant.jsx  Coach.jsx  Dashboard.jsx  RiskMonitor.jsx  StrategyBuilder.jsx  Trade.jsx
services/fe/src/utils/: formatters.js
(+23 files in other folders)
