[project]
name = "ai-brokerage-ai"
version = "0.1.0"
description = "AI Brokerage — AI Chat & Voice Service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "anthropic>=0.83.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
