[project]
name = "ai-brokerage-ai"
version = "0.1.0"
description = "AI Brokerage AI service — stateless LLM orchestration, chat, voice"
requires-python = ">=3.13,<4.0"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",

    # LLM
    "anthropic>=0.83.0",

    # HTTP client (for BE service calls)
    "httpx>=0.27.0",

    # Configuration
    "pydantic-settings>=2.0.0",

    # Voice pipeline (uncomment when ready)
    "pipecat-ai[websocket,silero]==0.0.102",
    "mlx-whisper",
    "kokoro-onnx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
