[project]
name = "ai-brokerage-be"
version = "0.1.0"
description = "AI Brokerage backend service — owns PostgreSQL, exposes REST API"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "apscheduler>=3.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
